default/objects/Relationship_Group__c/Relationship_Group__c.object-meta.xml
<CustomObject>
    <label>Relationship Group</label>
    <nameField>
        <label>Relationship Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>