default/objects/Relationship_Group__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Relationship Groups</relationshipLabel>
    <relationshipName>Relationship_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>