default/objects/Relationship_Group__c/fields/Layout__c.field-meta.xml
<CustomField>
    <fullName>Layout__c</fullName>
    <label>Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>