default/objects/Relationship_Group__c/fields/Parent_Relationship_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Relationship Group</label>
    <referenceTo>Relationship_Group__c</referenceTo>
    <relationshipLabel>Relationship Groups</relationshipLabel>
    <relationshipName>Relationship_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>