default/objects/Relationship_Group__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>Relationship Groups</relationshipLabel>
    <relationshipName>Relationship_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>