default/objects/Relationship_Group__c/fields/TempId__c.field-meta.xml
<CustomField>
    <fullName>TempId__c</fullName>
    <label>TempId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>